Updated the issue with blurred button

--- a/docs/css/baseweb.css
+++ b/docs/css/baseweb.css
@@ -1819,8 +1819,9 @@ body {
   text-align: center; }
 
 .home-main .text-lead {
-  margin: 0 0 2rem;
-  padding: 0; }
+  margin: 0 0 20px;
+  padding: 0;
+  line-height: 1.4em; }
 
 @media (min-width: 480px) {
   .home-main .text-lead {
@@ -1828,6 +1829,7 @@ body {
 
 @media (min-width: 760px) {
   .home-main .text-lead {
+    margin: 0 0 30px;
     padding: 0 6rem; } }
 
 /*==============================================================================
