--- a/docs/scss/custom/_tpl-home.scss
+++ b/docs/scss/custom/_tpl-home.scss
@@ -114,8 +114,9 @@
   text-align: center;
 }
 .home-main .text-lead {
-  margin: 0 0 2rem;
+  margin: 0 0 20px;
   padding: 0;
+  line-height: 1.4em;
 }
 
 @include media-min('mobile') {
@@ -126,6 +127,7 @@
 
 @include media-min('tablet') {
   .home-main .text-lead {
+    margin: 0 0 30px;
     padding: 0 6rem;
   }
 }
